# rust-crud-api

./: Cargo.toml
src/: db.rs  models.rs  schema.rs
