[package]
name = "rust-crud-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4.0", features = ["openssl"] }
actix-files = "0.6.2"
serde_json = "1.0.53"
diesel = { version = "2.1.3", features = ["postgres", "r2d2"] }
serde = { version = "1.0.110", features = ["derive"]}